# focus-app

./: .gitignore  agents.json  focus_app_ui_style_and_feature_extraction.md  index.html  package-lock.json  package.json  tsconfig.node.json
.github/workflows/: tauri-build.yml
FocusApp-Clean/: help.txt
FocusApp-Clean/src-tauri/: tauri.conf.json
_bmad/: config.toml  config.user.toml
_bmad-output/implementation-artifacts/: 1-1-bootstrap-the-desktop-app-shell.md  1-2-complete-first-run-onboarding.md  1-3-run-a-reliable-focus-timer.md  1-4-add-the-full-breathing-ritual-experience.md  1-5-persist-local-state-and-recover-interrupted-sessions.md  1-6-deliver-accessibility-baseline-for-core-flows.md  2-1-record-completed-sessions-and-show-session-history.md  2-2-surface-calm-analytics-and-streak-insights.md  2-3-manage-core-preferences-in-settings.md  2-4-export-local-telemetry-summary-as-json.md  3-1-control-focus-sessions-from-the-system-tray.md  3-2-launch-a-mini-ritual-and-silent-background-focus-session.md  3-3-deliver-native-notifications-for-focus-events.md  3-4-persist-window-state-and-startup-behavior.md  4-1-deliver-silent-background-updates-safely.md  4-2-complete-accessibility-and-reduced-motion-hardening.md  4-3-polish-performance-responsiveness-and-recovery-ux.md  sprint-status.yaml
_bmad-output/planning-artifacts/: epics.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/app/: App.tsx  (+1 more)
(+61 files in other folders)
